[metadata]
name = airflow
version = 0.9.0
description = airflow template package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = tkosht
author_email = takehito.oshita.business@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    apache-airflow >= 2.5.1
    apache-airflow-providers-docker >= 3.5.1

